# SimpleTorrent

./: CMakeLists.txt  LICENSE  README.md  build.bat
SimpleTorrent/: vcpkg.json
SimpleTorrent/lang/: en.ini  fr.ini  pt.ini  zh.ini
SimpleTorrent/src/: app.rc  main.cpp  resource.h  torrent_engine.cpp  torrent_engine.h
installer/: setup.iss
lang/: de.ini  es.ini  ru.ini
